# pi-web-tauri

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-linux.yml  build.yml
src/: pi-web-api.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
