[package]
name = "pi-web-desktop"
version = "0.1.0"
description = "PI WEB Desktop - A Tauri wrapper for PI WEB"
authors = ["you"]
license = "MIT"
repository = "https://github.com/jmfederico/pi-web"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pi_web_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rand = "0.8"
dirs = "6"
open = "5"
which = "7"

[profile.release]
opt-level = "s"
lto = true
